Round robin sorting now works.